--- a/templates/posts.html
+++ b/templates/posts.html
@@ -2,6 +2,14 @@
 
 {% block head %}
 <title>Posts</title>
+<!-- include libraries(jQuery,bootstrap) -->
+<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+
+<!-- include summernote css/js-->
+<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.css" rel="stylesheet">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -13,10 +21,15 @@
     <br>
     Author:  <input type='text' name='author' id='author'>
     <br>
-    Post:  <input type='text' name='content' id='content'>
+    Post :<textarea id="content" name="content"></textarea>
     <br>
     <input type='submit' value='Post'>
 </form>
+<script>
+    $(document).ready(function() {
+    $('#content').summernote();
+    });
+</script>
 <hr>
 
     {% for post in posts %}
@@ -26,7 +39,7 @@
         {% else %}
         <h3>By:author unknown</h3>
     {% endif %}
-    <p>{{ post.content }}</p>
+    <p>{{ post.content|safe }}</p>
     <a href='/posts/delete/{{post.id}}'>Delete</a>
     <a href='/posts/edit/{{post.id}}'>Edit</a>
     <hr>
