--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,21 +1,52 @@
-{% extends 'base.html' %}
-
-{% block head %}
+{% extends 'base.html' %} {% block head %}
 <title>Edit Post</title>
-{% endblock %}
-
-{% block body %}
-<h1>Edit posts</h1>
-<hr>
-<h2>Edit Blog Post</h2>
-<form action='/posts/edit/{{post.id}}' method='POST'>
-    Title: <input type='text' name='title' id='title' value="{{post.title}}">
-    <br>
-    Author:  <input type='text' name='author' id='author' value="{{post.author}}">
-    <br>
-    Post:  <input type='text' name='content' id='content' value="{{post.content}}">
-    <br>
-    <input type='submit' value='Save'>
+<style>
+  label {
+    font-size: 30px;
+  }
+</style>
+{% endblock %} {% block body %}
+<h2 class="alert alert-dark m-5">Edit Blog Post</h2>
+<form action="/posts/edit/{{post.id}}" method="POST">
+  <div class="form-group">
+    <h1><span class="badge badge-dark"> Title</span></h1>
+    <input
+      class="form-control"
+      type="text"
+      name="title"
+      id="title"
+      value="{{post.title}}"
+    />
+  </div>
+  <div class="form-group">
+    <h1><span class="badge badge-dark"> Author</span></h1>
+    <input
+      class="form-control"
+      type="text"
+      name="author"
+      id="author"
+      value="{{post.author}}"
+    />
+  </div>
+  <div>
+    <h1><span class="badge badge-dark">Post</span></h1>
+    <textarea
+      class="form-control"
+      type="text"
+      name="content"
+      id="content"
+      value="{{post.content}}"
+    >
+{{post.content}}</textarea
+    >
+  </div>
+  <input class="btn btn-primary m-4" type="submit" value="Save" />
 </form>
-<hr>
+<p></p>
+<script>
+  $(document).ready(function () {
+    $("#content").summernote();
+  });
+</script>
+<hr />
 {% endblock %}
