--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
       <div class="navbar-brand">Blogging App</div>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/posts"
               >Home <span class="sr-only">(current)</span></a
             >
