Login / SignUp added - firebase

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,9 @@
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
     {% block head %} {% endblock %}
   </head>
-  <body class="text-monospace">
+  <body
+    class="text-monospace"
+  >
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="navbar-brand">Blogging App</div>
       <div class="collapse navbar-collapse" id="navbarNav">
