--- a/templates/login.html
+++ b/templates/login.html
@@ -2,21 +2,22 @@
 <title>SignUp html</title>
 {% endblock %} {% block body %}
 
-<form style="width: 400px; margin: 40px">
+<form action="/login" method="POST" style="width: 400px; margin: 40px">
   <h1 class="alert alert-dark">Login Form</h1>
 
   <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
+    <label for="email">Email address</label>
     <input
       type="email"
       class="form-control"
-      id="exampleInputEmail1"
+      id="email"
+      name="email"
       aria-describedby="emailHelp"
     />
   </div>
   <div class="form-group">
     <label for="Password">Password</label>
-    <input type="password" class="form-control" id="Password" />
+    <input type="password" class="form-control" name="Password" id="Password" />
   </div>
 
   <button type="submit" class="btn btn-primary">Login</button>
