login-route Protected

--- a/templates/newPost.html
+++ b/templates/newPost.html
@@ -23,11 +23,11 @@
           type="text"
           name="author"
           id="author"
+          value={{author}}
         />
       </div>
       <div>
         <h1  ><span class="badge badge-dark">Post</span>  </h1>
-
         <textarea
           class="form-control"
           type="text"
