--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,6 +6,11 @@
   <h1 class="alert alert-dark">Sign Up Form</h1>
 
   <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" name="username" class="form-control" id="username" />
+  </div>
+
+  <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
     <input
       type="email"
