--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link">Profile</a>
+            <a class="nav-link" href="/profile">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
