firebase real time database added

--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %} {% block head %}
 <title>Posts</title>
+<style type="text/css">
+  .button{
+      background: url(like.jpg) no-repeat;
+      cursor:pointer;
+      border: none;
+  }
+</style>
 {% endblock %} {% block body %}
 <h1>All posts</h1>
 <hr />
