Firebase - delete , Update posts

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block head %}
-<title>SignUp html</title>
+<title>Welcome to BlogApp</title>
 {% endblock %} {% block body %}
 
 <div>
