--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block head %}
-<title>SignUp html</title>
+<title>Login html</title>
 {% endblock %} {% block body %}
 
 <form action="/login" method="POST" style="width: 400px; margin: 40px">
